zapata-dx/force-app/main/default/objects/Parametros_Garantia__c/Parametros_Garantia__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Umbrales generales de garantia. Existe para que la formula de tamizaje NO tenga numeros quemados: se editan aqui sin volver a desplegar. Los limites finos por modelo y sistema viven en Regla_Cobertura__c; esto es solo el periodo general.</description>
    <label>Parametros de garantia</label>
</CustomObject>