zapata-dx/force-app/main/default/objects/Parametros_Garantia__c/fields/Km_Base__c.field-meta.xml
<CustomField>
    <fullName>Km_Base__c</fullName>
    <description>Kilometraje general de fabrica. Hoy 250,000.</description>
    <label>Km de garantia basica</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>