zapata-dx/force-app/main/default/objects/Parametros_Garantia__c/fields/Margen_Cerca_Limite_Pct__c.field-meta.xml
<CustomField>
    <fullName>Margen_Cerca_Limite_Pct__c</fullName>
    <description>Que tan cerca del limite se considera zona de riesgo. Con 10%, una unidad a menos de 25,000 km del tope cae en CERCA_DEL_LIMITE y el agente debe confirmar el odometro antes de decidir.</description>
    <label>Margen de cercania al limite (%)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>