zapata-dx/force-app/main/default/objects/Parametros_Garantia__c/fields/Meses_Base__c.field-meta.xml
<CustomField>
    <fullName>Meses_Base__c</fullName>
    <description>Periodo general de fabrica en meses. Hoy 24. Se edita aqui, no en codigo.</description>
    <label>Meses de garantia basica</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>