zapata-dx/force-app/main/default/objects/Parametros_Garantia__c/fields/Vigencia_Evaluacion_Dias__c.field-meta.xml
<CustomField>
    <fullName>Vigencia_Evaluacion_Dias__c</fullName>
    <description>Cuantos dias sigue siendo citable un veredicto guardado. Hoy 30.</description>
    <label>Vigencia de la evaluacion (dias)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>