zapata-dx/force-app/main/default/objects/Parametros_Garantia__c/fields/Vigencia_Odometro_Dias__c.field-meta.xml
<CustomField>
    <fullName>Vigencia_Odometro_Dias__c</fullName>
    <description>Cuantos dias sigue siendo confiable una lectura. Hoy 90. Era el numero que estaba quemado en la formula del Asset.</description>
    <label>Vigencia del odometro (dias)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>